--- a/fine_tuning_demo.ipynb
+++ b/fine_tuning_demo.ipynb
@@ -36,7 +36,9 @@
         "id": "Ik3z9rg9VVOX"
       },
       "source": [
-        "## Import libraries"
+        "## Import libraries\n",
+        "\n",
+        "*This is related to step 2 in the slide \"Checklist for fine-tuning a model\".*"
       ]
     },
     {
@@ -77,7 +79,11 @@
       "source": [
         "## Check whether we're using CPU or GPU\n",
         "\n",
-        "CUDA is a parallel computing platform and API developed by NVIDIA to use their GPUs. While CUDA is for NVIDIA's GPUs, MPS is for Apple Silicon. In the code chunk below, if it says \"cuda\" or \"mps\", it means we're using a GPU.\n"
+        "CUDA is a parallel computing platform and API developed by NVIDIA to use their GPUs. While CUDA is for NVIDIA's GPUs, MPS is for Apple Silicon. In the code chunk below, if it says \"cuda\" or \"mps\", it means we're using a GPU.\n",
+        "\n",
+        "*This is related to step 2 in the slide \"Checklist for fine-tuning a model\".*\n",
+        "\n",
+        "(You can find more information about CPUs vs. GPUs in the slide \"CPUs vs. GPUs\" in the appendix slides.)\n"
       ]
     },
     {
@@ -104,7 +110,9 @@
         "id": "gcfJwJbGVvn0"
       },
       "source": [
-        "## Read the data"
+        "## Read the data\n",
+        "\n",
+        "*This is related to step 3 in the slide \"Checklist for fine-tuning a model\".*"
       ]
     },
     {
@@ -399,9 +407,15 @@
         "id": "X25xN5e5dza6"
       },
       "source": [
+        "\"1\" or \"Protectionism: Positive\" means that the text is in favor of protectionism. \"0\" or \"Protectionism: Negative\" means that the text is against protectionism.\n",
+        "\n",
         "## Split `test` into `validation`, `test`, and `new`\n",
         "\n",
-        "This is only for demonstration purposes for this workshop."
+        "*This is related to step 3 in the slide \"Checklist for fine-tuning a model\".*\n",
+        "\n",
+        "(You can find more information about the train/validation/test split approach in the slide \"Train/validation/test split​\" in the appendix slides.)\n",
+        "\n",
+        "**`new` is only for demonstration purposes for this workshop.**"
       ]
     },
     {
@@ -518,7 +532,11 @@
         "id": "-KKb1mRnafCN"
       },
       "source": [
-        "## Set model that we're going to use\n",
+        "## Set name of pretrained model that we're going to use\n",
+        "\n",
+        "*This is related to step 4 in the slide \"Checklist for fine-tuning a model\".*\n",
+        "\n",
+        "(You can find more information about different types of models in the section \"NLP\" of the appendix slides.)\n",
         "\n",
         "Name from the [Hugging Face website](https://huggingface.co/distilbert/distilbert-base-uncased):"
       ]
@@ -540,6 +558,8 @@
         "id": "MJ_liuh1atI8"
       },
       "source": [
+        "`MODEL_NAME` now is the name of the **PRETRAINED MODEL**.\n",
+        "\n",
         "## Tokenize the data\n",
         "\n",
         "Load appropriate tokenizer for the model:"
@@ -607,6 +627,8 @@
         "- `input_ids`: a list of token IDs corresponding to the input texts. `101` is the CLS token, `1045` is for \"I\", ..., `102` is SEP, and the rest is padding.\n",
         "- `attention_mask` is a list indicating which tokens should be attended to, where 1 is a real token and 0 is padding.\n",
         "\n",
+        "(You can find more information about text embeddings in the slide \"Text embeddings (ML review for fine-tuning)​\" in the appendix slides.)\n",
+        "\n",
         "Let's tokenize the whole dataset:"
       ]
     },
@@ -651,7 +673,7 @@
         "id": "gaGL7qSVdZgy"
       },
       "source": [
-        "## Load the model"
+        "## Load the pretrained model"
       ]
     },
     {
@@ -671,7 +693,13 @@
         "id": "M0B-fJARdg-l"
       },
       "source": [
-        "## Define metrics for evaluation"
+        "`model` is now the **PRETRAINED MODEL**.\n",
+        "\n",
+        "## Define metrics for evaluation\n",
+        "\n",
+        "*This is related to step 5 in the slide \"Checklist for fine-tuning a model\".*\n",
+        "\n",
+        "(You can find more information about performance metrics in the \"Performance metrics\" section of the appendix slides.)"
       ]
     },
     {
@@ -719,7 +747,7 @@
         "\n",
         "      Args:\n",
         "          eval_pred (tuple): A tuple containing:\n",
-        "              - logits (np.ndarray): The raw output predictions from the model.\n",
+        "              - logits (np.ndarray): The raw output predictions from the model. (Logits, also called logg-odds, are equal to the logarithm of the odds, which are the probability divided by one minus the probability.)\n",
         "              - labels (np.ndarray): The true labels corresponding to the inputs.\n",
         "      Returns:\n",
         "          dict: A dictionary containing the computed metric(s).\n",
@@ -743,7 +771,11 @@
         "id": "zG0fYSNDfErK"
       },
       "source": [
-        "## Define arguments for training"
+        "## Define arguments for fine-tuning\n",
+        "\n",
+        "*This is related to step 6 in the slide \"Checklist for fine-tuning a model\".*\n",
+        "\n",
+        "(You can find more information about some of the hyperparameters of neural networks in the \"Neural networks\" section of the appendix slides.)"
       ]
     },
     {
@@ -781,9 +813,13 @@
         "id": "w-oqeWOHf_Oa"
       },
       "source": [
-        "## Train the model\n",
+        "## Fine-tune the pretrained model\n",
         "\n",
-        "Define [`Trainer`](https://huggingface.co/docs/transformers/v4.52.3/en/main_classes/trainer#transformers.Trainer) object. This object takes a pretrained model and prepares it for training and evaluation. It abstracts a lot of the complexity that would be necessary using PyTorch directly."
+        "*This is related to step 6 in the slide \"Checklist for fine-tuning a model\".*\n",
+        "\n",
+        "(You can find more information on training a neural network in the \"Neural networks\" section of the appendix slides.)\n",
+        "\n",
+        "Define [`Trainer`](https://huggingface.co/docs/transformers/v4.52.3/en/main_classes/trainer#transformers.Trainer) object. This object takes a pretrained model and prepares it for training and evaluation (remember that `model` is the **PRETRAINED MODEL**). It abstracts a lot of the complexity that would be necessary using PyTorch directly."
       ]
     },
     {
@@ -809,7 +845,9 @@
         "id": "N2HOWvUFhoJ3"
       },
       "source": [
-        "Train model:"
+        "`trainer` is a training manager object, which includes the **FINE-TUNED MODEL**, the dataset, the training arguments, and the performance metrics.\n",
+        "\n",
+        "Fine-tune model:"
       ]
     },
     {
@@ -839,7 +877,9 @@
         "  - `train_loss`: average loss.\n",
         "  - `epoch`: epoch number completed.\n",
         "\n",
-        "## Test the model"
+        "## Test the fine-tuned model\n",
+        "\n",
+        "*This is related to step 7 in the slide \"Checklist for fine-tuning a model\".*"
       ]
     },
     {
@@ -866,7 +906,7 @@
         "- `eval_steps_per_second`: rate at which evaluation batches were processed.\n",
         "- `epoch`: epoch number at which evaluation was done.\n",
         "\n",
-        "## Generate predictions on new data\n",
+        "## Generate predictions on new data with the fine-tuned model\n",
         "\n",
         "Create dataset for `new` data since this is the format that `Trainer` expects."
       ]
@@ -908,7 +948,7 @@
         "id": "wmrX7nCypBYY"
       },
       "source": [
-        "Use model to get predictions (logits)."
+        "Use model to get predictions -- logits (logits, also called logg-odds, are equal to the logarithm of the odds, which are the probability divided by one minus the probability)."
       ]
     },
     {
@@ -1023,11 +1063,40 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Let's take a look at the examples that the model got wrong. Remember that \"1\" or \"Protectionism: Positive\" means that the text is in favor of protectionism. \"0\" or \"Protectionism: Negative\" means that the text is against protectionism."
+      ],
+      "metadata": {
+        "id": "ETOfMWY4ECGQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "errors = new[new['label'] != new['predicted_class']][['label', 'label_text', 'predicted_class', 'text']]\n",
+        "\n",
+        "for i, row in errors.iterrows():\n",
+        "  print(f\"Correct label: {row['label']}\")\n",
+        "  print(f\"What the correct label means: {row['label_text']}\")\n",
+        "  print(f\"Predicted label: {row['predicted_class']}\")\n",
+        "  print(f\"Text: {row['text']}\")\n",
+        "  print(\"=\" * 100)"
+      ],
+      "metadata": {
+        "id": "bRD0rzKdEAfu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "yRNX719Syotk"
       },
       "source": [
-        "## Answer research question"
+        "## Answer research question\n",
+        "\n",
+        "Remember the research question: in which country is protectionist political speech more prevalent?​"
       ]
     },
     {
@@ -1067,15 +1136,6 @@
         "\n",
         "This notebook uses code produced by ChatGPT. That's okay to do as long as you consider the privacy, security, and intellectual property implications, as well as understand the code. We do have a [workshop on writing effective prompts for coding with LLMs](https://github.com/nuitrcs/promptEngineering)."
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "nxxd4qzhhp-1"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
